--- a/MVCLogin/Views/Login/Index.cshtml
+++ b/MVCLogin/Views/Login/Index.cshtml
@@ -35,6 +35,7 @@
 
                 <tr>
                     <td>
+                        
                         @Html.LabelFor(model => model.UserName)
                     </td>
                     <td>
@@ -71,11 +72,14 @@
                     <td>
                         <input type="submit" name="name" value="Login" />
                         <input type="reset" name="name" value="Clear" />
+                        @Html.ActionLink("Create an account", "Create")
                     </td>
                 </tr>
             </table>
         }
     </div>
+
+
     <script src="~/Scripts/jquery-1.10.2.min.js"></script>
     <script src="~/Scripts/jquery.validate.min.js"></script>
     <script src="~/Scripts/jquery.validate.unobtrusive.min.js"></script>
